Improve stream usage and fix CandidateValidator logic